--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+
+@use '~primeicons/primeicons';
+@use '~primeng/resources/themes/saga-blue/theme';
+@use '~primeng/resources/primeng';
