--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 @use '~primeicons/primeicons';
 @use '~primeng/resources/themes/saga-blue/theme';
 @use '~primeng/resources/primeng';
+
+html {
+    font-family: var(--font-family);
+}
+
+p {
+    color: var(--text-color-secondary);
+}
