--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,12 @@ html {
     font-family: var(--font-family);
 }
 
+body {
+    max-width: 65ch;
+    margin: auto;
+    padding: 0 1.5rem;
+}
+
 p {
     color: var(--text-color-secondary);
 }
