--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @use '~primeicons/primeicons';
 @use '~primeng/resources/themes/saga-blue/theme';
 @use '~primeng/resources/primeng';
+@use '~primeflex/primeflex';
 
 html {
     font-family: var(--font-family);
