--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,16 @@
 <h1>PrimeNG Tests</h1>
-<h2>MultiSelect</h2>
-<p>This is a test of PrimeNG's MultiSelect Dropdown.</p>
-<p>
-    Unlike the default MultiSelect dropdown, this dropdown fetches the options to display from an API endpoint.
-    It uses the group feature to display options as grouped lists, and templates to display the option items.
-</p>
-<app-async-dropdown></app-async-dropdown> 
+
+<section>
+    <h2>MultiSelect</h2>
+    <p>This is a test of PrimeNG's MultiSelect Dropdown.</p>
+    <p>
+        Unlike the default MultiSelect dropdown, this dropdown fetches the options to display from an API endpoint.
+        It uses the group feature to display options as grouped lists, and templates to display the option items.
+    </p>
+    <!-- <app-async-dropdown></app-async-dropdown>  -->
+</section>
+
+<section>
+    <h2>ToggleForm</h2>
+    <app-toggle-form></app-toggle-form> 
+</section>
