--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,19 @@
 <h1>PrimeNG Tests</h1>
 
 <section>
-    <h2>MultiSelect</h2>
-    <p>This is a test of PrimeNG's MultiSelect Dropdown.</p>
-    <p>
-        Unlike the default MultiSelect dropdown, this dropdown fetches the options to display from an API endpoint.
-        It uses the group feature to display options as grouped lists, and templates to display the option items.
-    </p>
-    <!-- <app-async-dropdown></app-async-dropdown>  -->
-</section>
-
-<section>
     <h2>ToggleForm</h2>
     <app-toggle-form></app-toggle-form> 
 </section>
+
+<br>
+<br>
+<br>
+
+<section>
+    <h2>Share Panel</h2>
+    <app-share-panel></app-share-panel> 
+</section>
+
+<br>
+<br>
+<br>
