some SVG loading options

--- a/src/app/components/share-panel/share-panel.component.html
+++ b/src/app/components/share-panel/share-panel.component.html
@@ -3,6 +3,8 @@
         <article class="relative">
             <button class="absolute right-0" (click)="op.hide()">
                 <fa-icon [icon]="closeIcon"></fa-icon>
+                <svg-icon key="abacus"></svg-icon>
+                <svg-icon key="acorn"></svg-icon>
             </button>
             <app-toggle-form></app-toggle-form> 
         </article>
