create svg icon feature module

--- a/src/app/components/share-panel/share-panel.component.html
+++ b/src/app/components/share-panel/share-panel.component.html
@@ -3,6 +3,7 @@
         <article class="relative">
             <button class="absolute right-0" (click)="op.hide()">
                 <svg-icon [key]="closeIcon"></svg-icon>
+                <svg-icon key="fa-solid-acorn"></svg-icon>
             </button>
             <app-toggle-form></app-toggle-form> 
         </article>
